--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "clean": "rimraf lib",
     "lint": "eslint src",
-    "build": "cross-env BABEL_ENV=production babel src --out-dir lib",
-    "build-dev": "cross-env BABEL_ENV=development babel src --out-dir lib",
-    "dev": "watch 'npm run build-dev' src",
-    "prepublish": "npm run clean && npm run lint && npm run build"
+    "build": "npm run css-build && cross-env BABEL_ENV=production babel src --out-dir lib",
+    "build-dev": "npm run css-build && cross-env BABEL_ENV=development babel src --out-dir lib",
+    "dev": "npm run css-watch && watch 'npm run build-dev' src",
+    "prepublish": "npm run clean && npm run lint && npm run build",
+    "css-build": "node-sass --omit-source-map-url --output-style 'compressed' src/scss/main.scss lib/css/main.css",
+    "css-watch": "npm run css-build -- --watch",
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
+    "node-sass": "^4.12.0",
     "rimraf": "^2.6.3",
     "watch": "^1.0.2"
   },
