--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run css-build && cross-env BABEL_ENV=production babel src --out-dir lib",
     "build-dev": "npm run css-build && cross-env BABEL_ENV=development babel src --out-dir lib",
     "dev": "npm run css-watch && watch 'npm run build-dev' src",
-    "prepublish": "npm run clean && npm run lint && npm run build",
+    "prepublish": "npm run clean && npm run build",
     "css-build": "node-sass --omit-source-map-url --output-style 'compressed' src/scss/main.scss lib/dashboard.css",
     "css-watch": "npm run css-build -- --watch"
   },
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-router-dom": "^4.3.1"
