--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "clean": "rimraf lib",
     "lint": "eslint src",
-    "build": "npm run css-build && cross-env BABEL_ENV=production babel src --out-dir lib",
+    "build": "npm run css-build && npm run prefix-css && cross-env BABEL_ENV=production babel src --out-dir lib",
     "build-dev": "npm run css-build && cross-env BABEL_ENV=development babel src --out-dir lib",
     "dev": "npm run css-watch && watch 'npm run build-dev' src",
     "prepublish": "npm run clean && npm run build",
-    "css-build": "node-sass --omit-source-map-url --output-style 'compressed' src/scss/main.scss lib/dashboard.css && npm run prefix-css",
+    "css-build": "node-sass --omit-source-map-url --output-style 'compressed' src/scss/main.scss lib/dashboard.css",
     "prefix-css": "postcss lib/*.css -u autoprefixer -b 'last 5 versions' -r",
     "css-watch": "npm run css-build -- --watch"
   },
