--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lefapps/admin-dashboard",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React package dashboard navigation",
   "main": "./lib/index.js",
   "scripts": {
@@ -52,12 +52,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-router-dom": "^4.3.1"
+    "lodash": "^4.17.15"
   },
   "peerDependencies": {
-    "react-alert": "5.5.0"
+    "react-alert": "5.5.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   }
 }
