--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src",
     "build": "npm run css-build && npm run prefix-css && cross-env BABEL_ENV=production babel src --out-dir lib",
     "build-dev": "npm run css-build && cross-env BABEL_ENV=development babel src --out-dir lib",
-    "dev": "npm run css-watch && watch 'npm run build-dev' src",
+    "dev": "watch 'npm run build-dev' src",
     "prepublish": "npm run clean && npm run build",
     "css-build": "node-sass --omit-source-map-url --output-style 'compressed' src/scss/main.scss lib/dashboard.css",
     "prefix-css": "postcss lib/*.css -u autoprefixer -b 'last 5 versions' -r",
