--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.12.0",
-    "postcss": "^7.0.17",
+    "postcss": "^7.0.39",
     "postcss-cli": "^6.1.3",
     "rimraf": "^2.6.3",
     "watch": "^1.0.2"
@@ -55,7 +55,7 @@
     "lodash": "^4.17.15"
   },
   "peerDependencies": {
-    "react-alert": "5.5.0",
+    "react-alert": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-router-dom": "^5.0.1"
